// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicLayout applies custom className 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col custom-layout"
  >
    <header
      data-testid="mock-header"
    >
      Header
    </header>
    <main>
      Content
    </main>
    <footer
      data-testid="mock-footer"
    >
      Footer
    </footer>
  </div>
</div>
`;

exports[`BasicLayout maintains proper layout structure 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col"
  >
    <header
      data-testid="mock-header"
    >
      Header
    </header>
    <main>
      Main Content
    </main>
    <footer
      data-testid="mock-footer"
    >
      Footer
    </footer>
  </div>
</div>
`;

exports[`BasicLayout renders children with header and footer 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col"
  >
    <header
      data-testid="mock-header"
    >
      Header
    </header>
    <main>
      Test Content
    </main>
    <footer
      data-testid="mock-footer"
    >
      Footer
    </footer>
  </div>
</div>
`;
